log
Thu 04 May 2023 11:01:12 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:69:1: error: control reaches end of non-void function [-Werror=return-type]
   69 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
90e85e2
Thu 04 May 2023 11:02:23 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
e7f7297
Thu 04 May 2023 11:17:05 PM UTC: 
 sudoku.c | 50 ++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 50 insertions(+)
 tests:  2|4
total_score: 15/70
3ef5882
Thu 04 May 2023 11:22:44 PM UTC: 
 sudoku.c | 52 ++++++++++++++++++++++------------------------------
 1 file changed, 22 insertions(+), 30 deletions(-)
 tests:  5|3
total_score: 35/70
05a4e7e
Thu 04 May 2023 11:24:16 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
34634b3
Thu 04 May 2023 11:27:24 PM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  6|2
total_score: 45/70
9a7a33c
Thu 04 May 2023 11:40:18 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:130:1: error: control reaches end of non-void function [-Werror=return-type]
  130 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
662d7e0
Thu 04 May 2023 11:40:28 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
6f93776
Thu 04 May 2023 11:49:52 PM UTC: 
 sudoku.c | 44 +++++++++++++++++---------------------------
 1 file changed, 17 insertions(+), 27 deletions(-)
 tests:  6|2
total_score: 45/70
bf55e37
Thu 04 May 2023 11:50:06 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
a807ad9
Thu 04 May 2023 11:55:30 PM UTC: 
 sudoku.c | 48 +++++++++++++++++++++++-------------------------
 1 file changed, 23 insertions(+), 25 deletions(-)
 tests:  6|2
total_score: 45/70
f075e92
Thu 04 May 2023 11:57:49 PM UTC: 
 sudoku.c | 36 ++++++++++++++++++++++++++----------
 1 file changed, 26 insertions(+), 10 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:110:25: error: implicit declaration of function ‘freeNode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
  110 |                         freeNode(new_node);
      |                         ^~~~~~~~
      |                         createNode
cc1: all warnings being treated as errors
Compilation failed
a38a067
Thu 04 May 2023 11:58:00 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
2bb84fd
Thu 04 May 2023 11:58:15 PM UTC: 
 sudoku.c | 36 ++++++++++--------------------------
 1 file changed, 10 insertions(+), 26 deletions(-)
 tests:  6|2
total_score: 45/70
e838a2f
Thu 04 May 2023 11:59:17 PM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  6|2
total_score: 45/70
0558c90
Thu 04 May 2023 11:59:50 PM UTC: 
 sudoku.c | 56 +++++++++++++++++++++++++++++++-------------------------
 1 file changed, 31 insertions(+), 25 deletions(-)
 tests:  6|2
total_score: 45/70
4b1ce69
Fri 05 May 2023 12:05:34 AM UTC: 
 sudoku.c | 27 ++++++++++++++++++++++-----
 1 file changed, 22 insertions(+), 5 deletions(-)
 tests:  6|2
total_score: 45/70
048eeea
Fri 05 May 2023 12:07:08 AM UTC: 
 sudoku.c | 44 +++++++++++++++++++++-----------------------
 1 file changed, 21 insertions(+), 23 deletions(-)
 tests:  6|2
total_score: 45/70
35c71c8
Fri 05 May 2023 12:11:57 AM UTC: 
 sudoku.c | 49 ++++++++++++++++++++++++++-----------------------
 1 file changed, 26 insertions(+), 23 deletions(-)
 tests:  6|2
total_score: 45/70
68c2672
Fri 05 May 2023 12:13:03 AM UTC: 
 sudoku.c | 49 ++++++++++++++++++++-----------------------------
 1 file changed, 20 insertions(+), 29 deletions(-)
 tests:  6|2
total_score: 45/70
708a9a2
Fri 05 May 2023 12:14:10 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|2
total_score: 45/70
ff9214b
Fri 05 May 2023 12:14:16 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 45/70
eeecb53
Fri 05 May 2023 12:16:35 AM UTC: 
 sudoku.c | 24 ++++++------------------
 1 file changed, 6 insertions(+), 18 deletions(-)
 tests:  6|2
total_score: 45/70
630d5bf
Fri 05 May 2023 12:18:18 AM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  6|2
total_score: 45/70
24d628e
Fri 05 May 2023 12:21:53 AM UTC: 
 sudoku.c | 46 ++++++++++++++++++++++++++++++++++------------
 1 file changed, 34 insertions(+), 12 deletions(-)
 tests:  6|2
total_score: 45/70
f4d7ede
Fri 05 May 2023 12:25:06 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|2
total_score: 45/70
b662a53
Fri 05 May 2023 12:28:33 AM UTC: 
 sudoku.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
31c8cde
Fri 05 May 2023 12:29:40 AM UTC: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
f3f9327
Fri 05 May 2023 12:32:02 AM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
1e6d8d0
